{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 17,
  "lineage": "b5b17a0d-13d4-66b9-716e-75ea56fe5efd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074a6d8592a96ee84",
            "domain": "vpc",
            "id": "eipalloc-074a6d8592a96ee84",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-61-93.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.61.93",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:100472621715:internet-gateway/igw-08a0ae177bb2e5129",
            "id": "igw-08a0ae177bb2e5129",
            "owner_id": "100472621715",
            "vpc_id": "vpc-04932b04e82eaaf4d"
          },
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074a6d8592a96ee84",
            "connectivity_type": "public",
            "id": "nat-0d349a0f032cbd3bd",
            "network_interface_id": "eni-0d91b4ff45a2160ba",
            "private_ip": "10.0.0.23",
            "public_ip": "43.204.61.93",
            "subnet_id": "subnet-029e56de09bdf6f8e"
          },
          "dependencies": [
            "aws_eip.this_eip",
            "aws_subnet.this_public_subnet",
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "this_pri_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0622a50141016dcbe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d349a0f032cbd3bd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0622a50141016dcbe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this_eip",
            "aws_nat_gateway.this_nat_gateway",
            "aws_route_table.this_pri_route_table",
            "aws_subnet.this_public_subnet",
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "this_pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08a0ae177bb2e5129",
            "id": "r-rtb-0fd41adc38a9ff14b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fd41adc38a9ff14b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this_igw",
            "aws_route_table.this_pub_route_table",
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this_pri_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:100472621715:route-table/rtb-0622a50141016dcbe",
            "id": "rtb-0622a50141016dcbe",
            "owner_id": "100472621715",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04932b04e82eaaf4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this_pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:100472621715:route-table/rtb-0fd41adc38a9ff14b",
            "id": "rtb-0fd41adc38a9ff14b",
            "owner_id": "100472621715",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04932b04e82eaaf4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_private_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05040e2f7d698872e",
            "route_table_id": "rtb-0622a50141016dcbe",
            "subnet_id": "subnet-0d0314fc9d6edeef0"
          },
          "dependencies": [
            "aws_route_table.this_pri_route_table",
            "aws_subnet.this_private_subnet",
            "aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a8b01608285c47a",
            "route_table_id": "rtb-0622a50141016dcbe",
            "subnet_id": "subnet-0f611983e0ce497f5"
          },
          "dependencies": [
            "aws_route_table.this_pri_route_table",
            "aws_subnet.this_private_subnet",
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_public_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0971b1ad868d10b46",
            "route_table_id": "rtb-0fd41adc38a9ff14b",
            "subnet_id": "subnet-029e56de09bdf6f8e"
          },
          "dependencies": [
            "aws_route_table.this_pub_route_table",
            "aws_subnet.this_public_subnet",
            "aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082e21ef9426245be",
            "route_table_id": "rtb-0fd41adc38a9ff14b",
            "subnet_id": "subnet-0b0425ae0043618fe"
          },
          "dependencies": [
            "aws_route_table.this_pub_route_table",
            "aws_subnet.this_public_subnet",
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:100472621715:subnet/subnet-0d0314fc9d6edeef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0314fc9d6edeef0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "100472621715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04932b04e82eaaf4d"
          },
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:100472621715:subnet/subnet-0f611983e0ce497f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f611983e0ce497f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "100472621715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04932b04e82eaaf4d"
          },
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:100472621715:subnet/subnet-029e56de09bdf6f8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029e56de09bdf6f8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "100472621715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04932b04e82eaaf4d"
          },
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:100472621715:subnet/subnet-0b0425ae0043618fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0425ae0043618fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "100472621715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04932b04e82eaaf4d"
          },
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:100472621715:vpc/vpc-04932b04e82eaaf4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cd032c7b51739272",
            "default_route_table_id": "rtb-0fc1df4d28b482e6f",
            "default_security_group_id": "sg-0dab1cc654815e6d4",
            "dhcp_options_id": "dopt-017a363ebcfebd035",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04932b04e82eaaf4d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc1df4d28b482e6f",
            "owner_id": "100472621715"
          }
        }
      ]
    }
  ]
}